<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edt_name"
            android:hint="@string/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:hint="@string/input_number"
            android:id="@+id/edt_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/r_btn_gender_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_male"
            android:textSize="50px" />

        <RadioButton
            android:id="@+id/r_btn_gender_famale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_female"
            android:textSize="50px" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btn_add_number_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_phone_number" />
    </LinearLayout>
    <ListView
        android:id="@+id/list_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
</LinearLayout>
