<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="16dp">

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:textSize="15sp"
            android:id="@+id/btn_messenger"
            android:text="@string/messenger"
            android:layout_weight="0.8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:textSize="15sp"
            android:id="@+id/btn_call"
            android:text="@string/call"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
